Fix sortable elements container paddings
With the usage of Shoelace tabs we adjusted the padding of the
tabbed panels, but this is too high. Also we now highlight the
sortable elements area for which we need more padding now.

--- a/app/assets/stylesheets/alchemy/elements.scss
+++ b/app/assets/stylesheets/alchemy/elements.scss
@@ -60,8 +60,7 @@ alchemy-tinymce {
   display: block;
 }
 
-#main-content-elements,
-.element-editor.is-fixed .nestable-elements {
+#main-content-elements {
   padding: 2 * $default-padding $default-padding 2px;
 }
 
@@ -156,6 +155,10 @@ alchemy-tinymce {
   &.is-fixed {
     border-width: 0;
     border-radius: 0;
+
+    .nestable-elements {
+      padding: 2 * $default-padding $default-padding / 2;
+    }
   }
 
   &.not-draggable {
@@ -221,11 +224,7 @@ alchemy-tinymce {
       .nestable-elements {
         box-shadow: inset 0 4px 8px -2px darken($medium-gray, 15%);
         background-color: $medium-gray;
-        padding: 8px 4px 4px;
-
-        .add-nestable-element-button {
-          margin: 4px;
-        }
+        padding: $default-padding;
       }
     }
   }
@@ -905,11 +904,6 @@ textarea.has_tinymce {
       border-bottom: 1px solid $medium-gray;
     }
   }
-
-  > .nestable-elements .add-nestable-element-button {
-    width: 100%;
-    text-align: center;
-  }
 }
 
 .element-editor {
@@ -926,6 +920,14 @@ textarea.has_tinymce {
   }
 }
 
+.nestable-elements {
+  .add-nestable-element-button {
+    width: 100%;
+    text-align: center;
+    margin: 0;
+  }
+}
+
 .nested-elements {
   display: flex;
   flex-wrap: wrap;
@@ -936,7 +938,12 @@ textarea.has_tinymce {
 
   .element-editor {
     position: relative;
+    margin: $default-margin;
   }
+}
+
+.add-nested-element {
+  padding: $default-padding;
 }
 
 .droppable-elements {
